# tree

./: README.md  mytree.txt  pyproject.toml
.github/workflows/: cd.yml  release.yml
tree_cli/: cli.py
